# haskell_first_principlles

chapter10/: chapterExercises.hs  databaseProcessing.hs  folding_annotations.txt  scan.hs
chapter11/: asPatterns.hs  binaryTree.hs  cipher.hs  contructing.hs  deconstructing.hs  functionType.hs  huttonHazor.hs  languageExercise.hs  newType.hs  phone.hs  productType.hs  sumType.hs  vehicles.hs
chapter12/: binaryTrees.hs  eitherLibrary.hs  maybeLibrary.hs  naturalInteger.hs  stringProcessing.hs  unfolds.hs
chapter13/: palindrome.hs  person.hs
chapter13/ciphers/: ciphers.cabal  package.yaml
chapter13/hangman/: hangman.cabal
chapter14/QuickCheck/: ChapterExercises.hs  TestsQuickCheck.hs  quickCheck.cabal
chapter14/addition/: Addition.hs  addition.cabal
chapter14/ciphers/: ciphers.cabal
chapter14/hangman/: hangman.cabal
chapter14/hangman/app/: Main.hs
chapter14/hangman/src/: Hangman.hs
chapter14/hangman/test/: tests.hs
chapter14/morse/: morse.cabal
chapter14/wordNumber/: wordNumber.cabal
chapter15/: chapterExercises.hs  madlib.hs
chapter15/chapterExercise/: chapterExercises.cabal
chapter15/chapterExercise/src/: ChapterExercises.hs  MonoidExercises.hs  MonoidProps.hs  SemiGroupExercises.hs  SemiGroupProps.hs
chapter15/chapterExercise/test/: test.hs  testMonoid.hs  testSemiGroup.hs
chapter15/optional/: optional.cabal
chapter16/chapterExercises/: chapterExercises.cabal  package.yaml
chapter17/applicativesInUse/: constant.hs  fixerUpper.hs  identity.hs  lookups.hs
chapter17/lists/: applicatives.cabal  lists.cabal  package.yaml
chapter18/chapterExercises/: ChangeLog.md  chapterExercises.cabal
chapter2/: chapterExercise.hs  learn.hs  pratice.hs  triple.hs
chapter20/: foldableImpl.hs  libraryFunctions.hs
chapter21/traversable-exercise/: ChangeLog.md  README.md  package.yaml  traversable-exercise.cabal
chapter22/exercises/: Reader.hs  bipBoop.hs
chapter22/reader-pratice/: ReaderPratice.hs
chapter22/shawty/: package.yaml  shawty.cabal
chapter23/: State.hs
chapter24/parser/: package.yaml  parser.cabal
chapter3/: chapterExercise.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  topOrLocal.hs
chapter4/: chapterExercises.hs  greetIfCool1.hs  moodSwing.hs
chapter5/: arith3broken.hs  chapterExercises.hs  typeInference1.hs  typeInference2.hs  typeKwonDo.hs
chapter6/: chapterExercise.hs  eqInstances.hs
chapter7/: arith2.hs  arith4.hs  blockExercise.hs  caseExercise.hs  chapterExercise.hs  grabBag.hs  registeredUser2.hs  tupleExercise.hs
chapter8/: chapterExercise.hs  wordNumber.hs
chapter9/: chapterExercises.hs  cipher.hs  enumFromTo.hs  fearfulSymmetry.hs  listComprehesions.hs  poemLines.hs  zip.hs
(+63 files in other folders)
