-- addition.cabal
name:               quickCheck
version:            0.1.0.0
author:             Chicken Little
maintainer:         sky@isfalling.org
category:           Text
build-type:         Simple
cabal-version:      >=1.10

library
    exposed-modules:        TestsQuickCheck
    ghc-options:            -Wall -fwarn-tabs
    build-depends:          base >=4.7 && <5
                          , hspec 
                          , QuickCheck
    hs-source-dirs:         .
    default-language:       Haskell2010
    