-- optional.cabal
name:               chapterExercises
version:            0.1.0.0
license-file:       LICENSE
author:             Chicken Little
maintainer:         sky@isfalling.org
category:           Text
build-type:         Simple
cabal-version:      >=1.10

library
    exposed-modules:        
         ChapterExercises           
      ,  SemiGroupProps
    ghc-options:            -Wall -fwarn-tabs
    build-depends:          base >=4.7 && <5
                          , hspec 
                          , QuickCheck
    hs-source-dirs:         src
    default-language:       Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -fno-warn-orphans
  build-depends:
      base >=4.7 && <5
    , containers
    , QuickCheck
    , hspec
    , chapterExercises